--- a/style.css
+++ b/style.css
@@ -2,23 +2,26 @@
 
 
 :root {
---background-light: #e5e5e5;
+--background-light: #f8fafc;
 --text-light: #525252;   
 }
 
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
 background-color: var(--background-light);
+font-family: 'Rubik', sans-serif;
 }
 
 .page-grid {
    
 display: grid;
 grid-template: max-content calc(100vh) / max-content minmax(600px, 1fr);
+gap: 20px;
 
 
 }
@@ -60,7 +63,7 @@ background-image: url(/imgs/dashboard.png);
 background-size: 28px 28px;
 background-position: left;
 background-repeat: no-repeat;
-font-family: 'Rubik', sans-serif;
+
 padding-left: 35px;
 font-size: 22px; 
 font-weight: 400;
@@ -92,4 +95,91 @@ background-image: url(/imgs/support.png);
 }
 #privacy {
 background-image: url(/imgs/privacy.png);
+}
+
+.topnav {
+grid-column: 2 / 4 ;
+grid-row: 1 / 2;
+display: grid;
+grid-template-columns: 1fr max-content;
+background-color: #ffffff;
+padding: 15px 20px;    
+border-radius: 8px;
+box-shadow: 0px 2px 5px rgb(0 0 0 / 8%);
+margin: 20px 20px 20px 0px;
+}
+
+.navlink {
+display: flex;
+list-style-type: none;
+gap: 20px;
+align-items: center;   
+}
+
+.navlink a {
+text-decoration: none;
+color: #6b7280;    
+}
+
+.navlink a:hover {
+color: #86efac;
+}
+
+
+.navright {
+display: flex;
+align-items: center;
+gap: 15px;
+}
+
+.navright .bar-divider {
+background-color: #e2e8f0;    
+width: 1px;
+height: 100%;        
+}
+
+.alert {
+background-image: url(/imgs/alert.png);
+background-size: 25px 25px;   
+background-repeat: no-repeat;
+background-position: center; 
+height: 40px;
+width: 40px;
+}
+
+.avatar {
+color: #6b7280;
+}
+
+.avatar-icon {
+background-image: url(/imgs/avatar.png);
+background-size: 40px 40px;
+background-repeat: no-repeat;   
+background-position: center;
+height: 40px;
+width: 40px;
+
+}
+
+input, input:focus, input:not(:placeholder-shown) {
+border: none;
+outline: none;
+border-radius: 20px;
+font-size: 16px;
+transition: 0.3s;
+padding: 10px 20px;
+width: 280px;
+height: 40px;
+background-color: var(--background-light);
+ 
+}
+input:not(:focus):placeholder-shown {
+border: none;
+border-radius: 20px;
+height: 40px;
+width: 40px;
+background-image: url(/imgs/search.png);
+background-repeat: no-repeat;
+background-size: 20px 20px;
+background-position: 10px center;
 }
