--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
     box-sizing: border-box;
 }
 
+h3 {
+margin-bottom: 8px;     
+
+}
 body {
 background-color: var(--background-light);
 font-family: 'Rubik', sans-serif;
@@ -20,7 +24,7 @@ font-family: 'Rubik', sans-serif;
 .page-grid {
    
 display: grid;
-grid-template: max-content 100vh / max-content minmax(600px, 1fr);
+grid-template: max-content minmax(100vh, 1fr) / max-content minmax(600px, 1fr);
 gap: 20px;
 
 
@@ -51,7 +55,7 @@ color: #0369a1;
 
 .sidebar {
 background-color: #ffedd5;    
-grid-row: 1 / 4;
+grid-row: 1 / 3 ;
 grid-auto-rows: max-content;
 display: grid;
 row-gap: 25px;
@@ -187,6 +191,7 @@ background-position: 10px center;
 .maincontent {
 display: grid;    
 grid-template-columns: 1fr 300px;
+grid-row: 2 / 3;
 gap: 20px;   
 }
 
@@ -194,7 +199,7 @@ gap: 20px;
 display: grid;
 grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
 grid-auto-rows: max-content;
-gap: 5px;   
+gap: 12px;   
 }
 
 .project-title, .news-title {
@@ -205,7 +210,56 @@ grid-column: 1 / -1;
 }
 
 .project-card {
+display: grid;
+grid-template-rows: max-content 1fr max-content;
+gap: 10px;
 background-color: white;
-padding: 20px;
-height: 200px;   
+padding: 30px;
+   
+}
+
+.project-card h3 {
+
+}
+
+.card-img {
+background-image: url(/imgs/card-bg1.jpg);
+background-repeat: no-repeat;
+margin-bottom: 10px;
+border-radius: 5px;
+height: 120px;
+background-size: cover;
+background-position: center;
+}
+
+.card-tab {
+margin-top: 10px;
+gap: 15px;    
+display: flex;
+justify-content: right;    
+}
+
+.card-icon {
+height: 20px;
+width: 20px;
+background-size: 20px 20px;
+background-position: center;
+background-repeat: no-repeat;
+
+}
+
+.star {
+
+background-image: url(/imgs/star.png);
+
+}
+
+.view {
+
+background-image: url(/imgs/view.png);
+
+}
+
+.share {
+background-image: url(/imgs/share.png);
 }
