--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
 
-
 :root {
 --background-light: #f8fafc;
 --text-light: #525252;   
@@ -24,10 +23,12 @@ p, p > a {
 color: #6b7280;   
 }
 
-
-
-h4{
+h4, h5{
 color: #4b5563;    
+}
+
+h5 {
+font-size: 16px;    
 }
 
 body {
@@ -35,13 +36,10 @@ background-color: var(--background-light);
 font-family: 'Rubik', sans-serif;
 }
 
-.page-grid {
-   
+.page-grid {  
 display: grid;
 grid-template: max-content minmax(100vh, 1fr) / max-content minmax(600px, 1fr);
 gap: 20px;
-
-
 }
 
 .sidebar .bar-divider {
@@ -50,8 +48,7 @@ width: 100%;
 height: 1px;    
 }
 
-.sidebar a {
-    
+.sidebar a {   
 text-decoration: none;
 color: var(--text-light);
 background-size: 20px 20px;
@@ -66,7 +63,6 @@ font-size: 18px;
 color: #0369a1;
 }
     
-
 .sidebar {
 background-color: #ffedd5;    
 grid-row: 1 / 3 ;
@@ -81,7 +77,6 @@ background-image: url(/imgs/dashboard.png);
 background-size: 28px 28px;
 background-position: left;
 background-repeat: no-repeat;
-
 padding-left: 35px;
 font-size: 22px; 
 font-weight: 400;
@@ -142,7 +137,6 @@ color: #6b7280;
 .navlink a:hover {
 color: #86efac;
 }
-
 
 .navright {
 display: flex;
@@ -206,7 +200,8 @@ background-position: 10px center;
 display: grid;    
 grid-template-columns: 1fr 300px;
 grid-row: 2 / 3;
-gap: 20px;   
+gap: 20px;
+margin-bottom: 45px;   
 }
 
 .project {
@@ -229,11 +224,6 @@ grid-template-rows: max-content 1fr max-content;
 gap: 10px;
 background-color: white;
 padding: 30px;
-   
-}
-
-.project-card h3 {
-
 }
 
 .card-img {
@@ -259,7 +249,6 @@ width: 20px;
 background-size: 20px 20px;
 background-position: center;
 background-repeat: no-repeat;
-
 }
 
 .star {
@@ -290,4 +279,35 @@ grid-template-rows: max-content;
 background-color: #e2e8f0;    
 width: 100%;
 height: 1px;    
+}
+
+.trending-content {
+display: flex;
+align-items: center;
+gap: 20px;    
+}
+
+.user {
+background-repeat: none;
+background-size: cover;
+height: 65px;
+width: 65px;
+border-radius: 50%;    
+}
+
+.user-id p {
+margin-top: 4px;    
+}
+
+.iconone {
+background-image: url(/imgs/trending1.jpg);    
+}
+.icontwo {
+background-image: url(/imgs/trending2.jpg);    
+}
+.iconthree {
+background-image: url(/imgs/trending3.png);    
+}
+.iconfour {
+background-image: url(/imgs/trending4.jpg);
 }
