--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ font-size: 18px;
 }
 
 .sidebar a:hover {
-color: #0369a1;
+color: #0284c7;
 }
     
 .sidebar {
@@ -220,10 +220,18 @@ grid-column: 1 / -1;
 
 .project-card {
 display: grid;
+box-shadow: 0px 2px 5px rgb(0 0 0/ 10% ) ;
+border-radius: 8px;
 grid-template-rows: max-content 1fr max-content;
 gap: 10px;
 background-color: white;
 padding: 30px;
+}
+
+.project-card:hover {
+box-shadow: 0px 2px 5px rgb(0 0 0/ 25% ) ;
+outline: 2px solid lightpink;
+transition: all 0.3s;  
 }
 
 .card-img {
